--- a/Mahjong-Ways-dengan-RTP-LIVE-98-persen.html
+++ b/Mahjong-Ways-dengan-RTP-LIVE-98-persen.html
@@ -252,12 +252,12 @@
       <div class="btn-body">
         <div class="btn-items">
           <a href="https://medanlink.com/KmvazKba8Pbj" rel="nofollow noreferrer" target="_blank">
-            <amp-img src="https://JART.b-cdn.net/grandpost/heros%20logo.png" width="150" height="70" alt="Daftar BelutWin" layout="fixed"></amp-img>
+            <amp-img src="https://imagizer.imageshack.com/img922/6310/tadbK1.png" width="150" height="70" alt="Daftar BelutWin" layout="fixed"></amp-img>
           </a>
         </div>
         <div class="btn-items">
           <a href="https://medanlink.com/8GydwPrnaVnL" rel="nofollow noreferrer" target="_blank">
-            <amp-img src="https://JART.b-cdn.net/grandpost/bukit%20logo.png" width="150" height="70" alt="Login MpoTurbo" layout="fixed"></amp-img>
+            <amp-img src="https://imagizer.imageshack.com/img923/615/iBLqTQ.png" width="150" height="70" alt="Login MpoTurbo" layout="fixed"></amp-img>
           </a>
         </div>
       </div>
