--- a/Mahjong-Ways-dengan-RTP-LIVE-98-persen.html
+++ b/Mahjong-Ways-dengan-RTP-LIVE-98-persen.html
@@ -257,7 +257,7 @@
         </div>
         <div class="btn-items">
           <a href="https://medanlink.com/8GydwPrnaVnL" rel="nofollow noreferrer" target="_blank">
-            <amp-img src="https://imagizer.imageshack.com/img923/615/iBLqTQ.png" width="150" height="70" alt="Login MpoTurbo" layout="fixed"></amp-img>
+            <amp-img src="https://imagizer.imageshack.com/img924/6047/w6rRpB.png" width="150" height="70" alt="Login MpoTurbo" layout="fixed"></amp-img>
           </a>
         </div>
       </div>
